[package]
name = "svg_to_ahk"
version = "0.1.8"
edition = "2021"
authors = ["Perondas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg2polylines = {git = "https://github.com/Perondas/svg2polylines.git"}
clap = "3.1.12"
rand = "0.8.4"